--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,34 +19,86 @@
 #           repoToken: ${{ secrets.GITHUB_TOKEN }}
 #           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}
 #           projectId: zoove-website
-name: Deploy to Firebase Hosting on PR
-on: pull_request
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
-jobs:
-  build_and_preview:
-    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      # Add Node.js setup
+
+# name: Deploy to Firebase Hosting on PR
+# on: pull_request
+# permissions:
+#   checks: write
+#   contents: read
+#   pull-requests: write
+# jobs:
+#   build_and_preview:
+#     if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+
+#       # Add Node.js setup
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: '18.17.1'  # Use the appropriate version for your project
+
+#       - name: Install dependencies
+#         run: npm install  # Ensure dependencies are installed before building
+
+#       - name: Build project
+#         run: npm run build  # Run the build command
+
+#       - uses: FirebaseExtended/action-hosting-deploy@v0
+#         with:
+#           repoToken: ${{ secrets.GITHUB_TOKEN }}
+#           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}
+#           projectId: zoove-website
+
+name: Deploy to Firebase Hosting on merge
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build_and_deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      # 1) Check out the repo
+      - name: Check out the repository
+        uses: actions/checkout@v4
+
+      # 2) Set up Node
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.17.1'  # Use the appropriate version for your project
+          node-version: '18.17.1'  # or whichever version you prefer
 
+      # 3) Install dependencies
       - name: Install dependencies
-        run: npm install  # Ensure dependencies are installed before building
+        run: npm install
 
+      # 4) Create a .env file from your multiline secret
+      #    This secret contains lines like:
+      #      VITE_FIREBASE_API_KEY=...
+      #      VITE_FIREBASE_AUTH_DOMAIN=...
+      #      etc.
+      - name: Create .env file
+        run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}" >> .env
+
+      # 5) Build your Vite project
+      #    Vite will now pick up the .env variables you just created
       - name: Build project
-        run: npm run build  # Run the build command
+        run: npm run build
 
-      - uses: FirebaseExtended/action-hosting-deploy@v0
+      # 6) Deploy to Firebase Hosting
+      #    Use the service account JSON from the correct secret for credentials
+      - name: Deploy to Firebase
+        uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}  # <-- JSON credentials
           projectId: zoove-website
+          channelId: live  # Deploy to your live channel
+
 
