--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -52,53 +52,37 @@
 #           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}
 #           projectId: zoove-website
 
-name: Deploy to Firebase Hosting on merge
+name: Deploy to Firebase Hosting on PR
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 
 jobs:
-  build_and_deploy:
+  build_and_preview:
     runs-on: ubuntu-latest
-
     steps:
-      # 1) Check out the repo
-      - name: Check out the repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2) Set up Node
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.17.1'  # or whichever version you prefer
+          node-version: '18.17.1'
 
-      # 3) Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # 4) Create a .env file from your multiline secret
-      #    This secret contains lines like:
-      #      VITE_FIREBASE_API_KEY=...
-      #      VITE_FIREBASE_AUTH_DOMAIN=...
-      #      etc.
       - name: Create .env file
         run: echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZOOVE_WEBSITE }}" >> .env
 
-      # 5) Build your Vite project
-      #    Vite will now pick up the .env variables you just created
       - name: Build project
         run: npm run build
 
-      # 6) Deploy to Firebase Hosting
-      #    Use the service account JSON from the correct secret for credentials
-      - name: Deploy to Firebase
-        uses: FirebaseExtended/action-hosting-deploy@v0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}  # <-- JSON credentials
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }} # JSON credentials
           projectId: zoove-website
-          channelId: live  # Deploy to your live channel
+          # This action will automatically create a preview channel for the PR
+
 
 
